FIX: content-wrapper padding issues
Add new class for content-wrapper with no sidebar to fix padding on
no authentication pages where the sidebar is missing.

Increase bottom padding of the content-wrapper to prevent cut off
of content on some mobile browsers.

--- a/src/food_hub/assets/style/_sidebar.scss
+++ b/src/food_hub/assets/style/_sidebar.scss
@@ -137,6 +137,14 @@
         padding-right: 0.5rem !important;
 
     }
+    &.no-sidebar {
+        padding-left: 2rem !important;
+        @include media-breakpoint-down(md) {
+            padding-left: 0.5rem !important;
+            padding-right: 0.5rem !important;
+
+        }
+    }
 }
 
 .nav-sidebar .nav-link p {
